additional updates to cards and kebab dropdown

--- a/source/_patterns/basics/dropdowns/02-dropdown-styles.hbs
+++ b/source/_patterns/basics/dropdowns/02-dropdown-styles.hbs
@@ -5,3 +5,4 @@
 {{> basics-dropdown dropdownText= "Info" btnClass="btn-info" }}
 {{> basics-dropdown dropdownText= "Warning" btnClass="btn-warning" }}
 {{> basics-dropdown dropdownText= "Danger" btnClass="btn-danger" }}
+{{> basics-dropdown isKebab= true }}
