--- a/source/_patterns/templates/00-cardview/cardview.hbs
+++ b/source/_patterns/templates/00-cardview/cardview.hbs
@@ -164,7 +164,7 @@
       {{> components-card singleselect=true cardTitleSize="h4" cardTitle="Shorter Title" cardContents="This card has a header and a dropdown menu in the header." cardHeader=true cardHeaderDropdown=true }}
     </div>
     <div class="col-md-3 col-sm-4">
-      {{> components-card singleselect=true cardTitleSize="h4" cardTitle="Shorter Title" cardContents="This card has a header and a dropdown menu in the header." cardHeader=true cardHeaderDropdown=true }}
+      {{> components-card singleselect=true cardTitleSize="h4" cardTitle="ReallyLongTitleWithNoSpaces" cardContents="This card has a header and a dropdown menu in the header." cardHeader=true cardHeaderDropdown=true }}
     </div>
 
 
@@ -188,7 +188,7 @@
       {{> components-card-multiselect }}
     </div>
     <div class="col-md-3 col-sm-4">
-      {{> components-card cardTitleSize="h3" cardTitle="Card with Checkbox" cardContents="This card has a checkbox, for cases when a card view supports multiselection" selected=true multiselect=true }}
+      {{> components-card cardTitleSize="h3" cardTitle="ReallyLongTitleWithNoSpaces" cardContents="This card has a checkbox, for cases when a card view supports multiselection" selected=true multiselect=true }}
     </div>
     <div class="col-md-3 col-sm-4">
       {{> components-card-multiselect }}
