--- a/source/css/patternfly.css
+++ b/source/css/patternfly.css
@@ -6126,8 +6126,14 @@ tbody.collapse.in {
       display: inline-block;
       width: 100%; } }
 
-.pf-card {
-  box-shadow: 0 0.1em 0.2em rgba(3, 3, 3, 0.1); }
+.pf-card::after {
+  box-shadow: 0 0.1em 0.2em rgba(3, 3, 3, 0.1);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  content: ""; }
 
 .pf-card {
   border: none; }
@@ -6138,8 +6144,19 @@ tbody.collapse.in {
     background: #fafafa;
     border-top-color: #d1d1d1; }
 
+.card-title {
+  overflow: hidden;
+  text-overflow: ellipsis; }
+
+.pf-card__block,
 .pf-card__header {
   padding: 1.5rem; }
+
+.pf-card__footer {
+  padding: 1rem 1.5rem; }
+
+.pf-card__footer p {
+  margin: 0.25rem 0; }
 
 .pf-card__header__title {
   margin: 0; }
@@ -6147,11 +6164,11 @@ tbody.collapse.in {
 .pf-card__header__dropdown {
   margin: -0.5rem 0; }
 
-.pf-card__block {
-  padding: 1.5rem; }
+.pf-card__kebab {
+  margin: -0.5rem; }
 
-.pf-card__footer p {
-  margin: 0.25rem 0; }
+.pf-card__top-element {
+  margin-bottom: 1.25rem; }
 
 .pf-card--accented {
   border-top: 2px solid #39a5dc; }
@@ -6159,6 +6176,8 @@ tbody.collapse.in {
 .pf-card--select {
   border: 2px solid transparent;
   background-clip: content-box; }
+  .pf-card--select:hover::after {
+    box-shadow: 0 0.1em 0.3em rgba(3, 3, 3, 0.3); }
 
 .pf-card--select--active {
   border-color: #39a5dc; }
@@ -6171,13 +6190,8 @@ tbody.collapse.in {
 .pf-card__checkbox {
   width: 2rem;
   height: 3rem;
-  text-align: center; }
-  .pf-card--multiselect__block .pf-card__checkbox {
-    padding-top: 1rem; }
-  .pf-card--multiselect__header .pf-card__checkbox {
-    padding-top: 1.25rem; }
-
-.pf-card__checkbox {
+  text-align: center;
+  padding-top: 1.25rem;
   position: absolute;
   top: 0;
   left: 0; }
@@ -6186,6 +6200,9 @@ tbody.collapse.in {
     position: relative; }
     .pf-card--select:hover .pf-card__checkbox input[type=checkbox], .pf-card__checkbox input[type=checkbox]:focus, .pf-card__checkbox input[type=checkbox]:checked {
       z-index: auto; }
+
+.pf-alt-background {
+  background-color: #f5f5f5; }
 
 .breadcrumb {
   padding: 0.75rem 0rem;
