--- a/source/_patterns/templates/00-cardview/cardview.hbs
+++ b/source/_patterns/templates/00-cardview/cardview.hbs
@@ -205,6 +205,20 @@
     <div class="col-md-3 col-sm-4">
       {{> components-card-multiselect }}
     </div>
+
+    <div class="col-md-3 col-sm-4">
+      {{> components-card noTitle=true cardContents="This card has no title, just in case" selected=true multiselect=true }}
+    </div>
+    <div class="col-md-3 col-sm-4">
+      {{> components-card noTitle=true cardContents="This card has no title, just in case" multiselect=true }}
+    </div>
+    <div class="col-md-3 col-sm-4">
+      {{> components-card noTitle=true cardContents="This card has no title, just in case" multiselect=true }}
+    </div>
+    <div class="col-md-3 col-sm-4">
+      {{> components-card noTitle=true cardContents="This card has no title, just in case" multiselect=true }}
+    </div>
+
   </div>
 
 </div>
