--- a/source/css/patternfly.css
+++ b/source/css/patternfly.css
@@ -6133,7 +6133,8 @@ tbody.collapse.in {
   bottom: 0;
   right: 0;
   left: 0;
-  content: ""; }
+  content: "";
+  pointer-events: none; }
 
 .pf-card {
   border: none; }
