--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -12,6 +12,7 @@
 @import "node_modules/bootstrap/scss/input-group";
 @import "node_modules/bootstrap/scss/custom-forms";
 @import "node_modules/bootstrap/scss/nav";
+@import "pf-basic-tabs";
 @import "node_modules/bootstrap/scss/navbar";
 @import "node_modules/bootstrap/scss/card";
 @import "pf-component-card";
