--- a/source/_patterns/components/03-cards/00-card.hbs
+++ b/source/_patterns/components/03-cards/00-card.hbs
@@ -1,23 +1,23 @@
 
 <div class="card pf-card {{#if textCenter}}text-xs-center{{/if}} {{#if cardAccent}}pf-card--accented{{/if}} {{#if multiselect}}pf-card--multiselect pf-card--select{{/if}} {{#if singleselect}}pf-card--select{{/if}} {{#if selected}}pf-card--select--active{{/if}}">
 {{#if cardHeader}}
-  <div class="card-header pf-card__header {{#if multiselect}}pf-card--multiselect__header{{/if}}">
+  <div class="card-header">
     {{#if multiselect}}
       <label class="pf-card__checkbox">
         <input type="checkbox" {{#if selected}}checked{{/if}}>
       </label>
     {{/if}}
     {{#if cardKebab}}
-      {{> basics-dropdown isKebab=true dropdownState="pf-card__kebab" pullright=true }}
+      {{> basics-dropdown isKebab=true pullright=true }}
     {{/if}}
     {{#if cardHeaderDropdown}}
-      {{> basics-dropdown dropdownState="pf-card__header__dropdown" dropdownText="Dropdown" pullright=true }}
+      {{> basics-dropdown dropdownText="Dropdown" pullright=true }}
     {{/if}}
-    <{{cardTitleSize}} class="card-title pf-card__header__title">{{{cardTitle}}}</{{cardTitleSize}}>
+    <{{cardTitleSize}} class="card-title">{{{cardTitle}}}</{{cardTitleSize}}>
   </div>
-  <div class="card-block pf-card__block">
+  <div class="card-block">
 {{else}}
-  <div class="card-block pf-card__block {{#if multiselect}}pf-card--multiselect__block{{/if}}">
+  <div class="card-block">
     {{#if multiselect}}
       <label class="pf-card__checkbox">
         <input type="checkbox" {{#if selected}}checked{{/if}}>
@@ -30,12 +30,12 @@
         <div class="pf-card__top-element">{{> basics-icon iconFamily="pficon" iconName="pficon-middleware" iconModifier="pf-icon--circle pf-icon--md" }}</div>
     {{/if}}
     {{#if cardKebab}}
-      {{> basics-dropdown isKebab=true dropdownState="pf-card__kebab" pullright=true }}
+      {{> basics-dropdown isKebab=true pullright=true }}
     {{/if}}
     {{#if noTitle}}
     {{else}}
       <{{cardTitleSize}} class="card-title">{{{cardTitle}}}</{{cardTitleSize}}>
-    {{/if}}  
+    {{/if}}
 {{/if}}
 {{#if @partial-block}}
   {{> @partial-block}}
@@ -44,7 +44,7 @@
 {{/if}}
   </div>
 {{#if cardFooter}}
-  <div class="card-footer pf-card__footer text-muted">
+  <div class="card-footer text-muted">
     {{#if cardFooterDropdown}}
       {{> basics-dropdown dropdownText="Dropdown" pullright=true }}
     {{/if}}
