--- a/source/css/patternfly.css
+++ b/source/css/patternfly.css
@@ -6126,47 +6126,38 @@ tbody.collapse.in {
       display: inline-block;
       width: 100%; } }
 
-.pf-card::after {
-  box-shadow: 0 0.1em 0.2em rgba(3, 3, 3, 0.1);
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  content: "";
-  pointer-events: none; }
-
 .pf-card {
   border: none; }
   .pf-card .card-header {
     background: #fff;
-    border-bottom-color: #d1d1d1; }
+    border-bottom-color: #d1d1d1;
+    padding: 1.5rem; }
+    .pf-card .card-header .card-title {
+      margin: 0; }
+    .pf-card .card-header .dropdown {
+      margin: -0.5rem 0; }
   .pf-card .card-footer {
     background: #fafafa;
-    border-top-color: #d1d1d1; }
-
-.card-title {
-  overflow: hidden;
-  text-overflow: ellipsis; }
-
-.pf-card__block,
-.pf-card__header {
-  padding: 1.5rem; }
-
-.pf-card__footer {
-  padding: 1rem 1.5rem; }
-
-.pf-card__footer p {
-  margin: 0.25rem 0; }
-
-.pf-card__header__title {
-  margin: 0; }
-
-.pf-card__header__dropdown {
-  margin: -0.5rem 0; }
-
-.pf-card__kebab {
-  margin: -0.5rem; }
+    border-top-color: #d1d1d1;
+    padding: 1rem 1.5rem; }
+    .pf-card .card-footer p {
+      margin: 0.25rem 0; }
+  .pf-card .card-block {
+    padding: 1.5rem; }
+  .pf-card .card-title {
+    overflow: hidden;
+    text-overflow: ellipsis; }
+  .pf-card .dropdown.pf-dropdown__kebab {
+    margin: -0.5rem; }
+  .pf-card::after {
+    box-shadow: 0 0.1em 0.2em rgba(3, 3, 3, 0.1);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    content: "";
+    pointer-events: none; }
 
 .pf-card__top-element {
   margin-bottom: 1.25rem; }
@@ -6183,8 +6174,8 @@ tbody.collapse.in {
 .pf-card--select--active {
   border-color: #39a5dc; }
 
-.pf-card--multiselect__block,
-.pf-card--multiselect__header {
+.pf-card--multiselect .card-block,
+.pf-card--multiselect .card-header {
   padding-left: 2rem;
   padding-right: 2rem; }
 
@@ -6196,14 +6187,12 @@ tbody.collapse.in {
   position: absolute;
   top: 0;
   left: 0; }
-  .pf-card__checkbox input[type=checkbox] {
-    z-index: -1;
-    position: relative; }
-    .pf-card--select:hover .pf-card__checkbox input[type=checkbox], .pf-card__checkbox input[type=checkbox]:focus, .pf-card__checkbox input[type=checkbox]:checked {
-      z-index: auto; }
-
-.pf-alt-background {
-  background-color: #f5f5f5; }
+  @media (hover: hover) {
+    .pf-card__checkbox input[type=checkbox] {
+      z-index: -1;
+      position: relative; }
+      .pf-card--select:hover .pf-card__checkbox input[type=checkbox], .pf-card__checkbox input[type=checkbox]:focus, .pf-card__checkbox input[type=checkbox]:checked {
+        z-index: auto; } }
 
 .breadcrumb {
   padding: 0.75rem 0rem;
