--- a/source/scss/_pf-component-card.scss
+++ b/source/scss/_pf-component-card.scss
@@ -2,17 +2,6 @@
 // Base styles
 //
 
-.pf-card::after {
-  @include box-shadow($pf-box-shadow);
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  content: "";
-  pointer-events: none;
-}
-
 // Although .pf-card is a modifier of bootstrap .card, I am treating it as a
 // block element. The nesting classes are to keep the code DRY and overwrite
 // bootstrap defaults.
@@ -24,35 +13,45 @@
   .card-header{
     background: $pf-card-cap-bg;
     border-bottom-color: $pf-card-border-color;
+    padding: $pf-spacer-lg;
+    .card-title {
+      margin: 0;
+    }
+    .dropdown {
+      margin: -$pf-spacer-xxs 0;
+    }
   }
-
   .card-footer{
     background: $pf-card-footer-bg;
     border-top-color: $pf-card-border-color;
+    padding: $pf-spacer-sm $pf-spacer-lg;
+    p {
+      margin: $pf-spacer-xxxs 0;
+    }
   }
-}
-.card-title {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.pf-card__block,
-.pf-card__header  {
-  padding: $pf-spacer-lg;
-}
-.pf-card__footer  {
-  padding: $pf-spacer-sm $pf-spacer-lg;
-}
-.pf-card__footer p {
-  margin: $pf-spacer-xxxs 0;
-}
-.pf-card__header__title {
-  margin: 0;
-}
-.pf-card__header__dropdown {
-  margin: -$pf-spacer-xxs 0;
-}
-.pf-card__kebab {
-  margin: -$pf-spacer-xxs;
+  .card-block {
+    padding: $pf-spacer-lg;
+  }
+  .card-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  // .dropdown {
+  //   margin: -$pf-spacer-xxs 0;
+  // }
+  .dropdown.pf-dropdown__kebab {
+    margin: -$pf-spacer-xxs;
+  }
+  &::after {
+    @include box-shadow($pf-box-shadow);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    content: "";
+    pointer-events: none; // needed to avoid interfering with clicking on contents in the card.
+  }
 }
 .pf-card__top-element {
   margin-bottom: $pf-spacer-md;
@@ -70,10 +69,12 @@
 .pf-card--select--active {
   border-color: $pf-card-border-color-active;
 }
-.pf-card--multiselect__block,
-.pf-card--multiselect__header {
-  padding-left: $pf-spacer-xxl;
-  padding-right: $pf-spacer-xxl;
+.pf-card--multiselect {
+  .card-block,
+  .card-header {
+    padding-left: $pf-spacer-xxl;
+    padding-right: $pf-spacer-xxl;
+  }
 }
 .pf-card__checkbox {
   width: $pf-spacer-xxl;
@@ -83,21 +84,23 @@
   position: absolute;
   top: 0;
   left: 0;
-  input[type=checkbox] {
-    //visibility: hidden; is not keyboard accessible and should be replaced with something that keeps the checkbox "visible" in the dom but not rendered on the screen
-    // using z-index to push the checkbox behind the card until it has keyboard focus, or the user hovers over the card
-    // -!!!- still need to include css that always renders the checkbox for small screens (i.e. mobile devices)
-    z-index:-1;
-    position: relative;
-    .pf-card--select:hover &,
-    &:focus,
-    &:checked {
-      z-index: auto;
+  // checkboxes are only hidden where hover is available (and also for browsers
+  // that support the hover media query)
+  @media (hover: hover) {
+    input[type=checkbox] {
+      // visibility: hidden; is not keyboard accessible therefore it's being
+      // replaced with z-index which keeps the checkbox "visible" in the dom
+      // z-index: -1 results in the checkbox being pushed behind the card and
+      // therefore not visible on the screen
+      // then on hover over the card, or focus or selection in the checkbox,
+      // z-index: auto displays the checkbox on top of the card
+      z-index:-1;
+      position: relative;
+      .pf-card--select:hover &,
+      &:focus,
+      &:checked {
+        z-index: auto;
+      }
     }
   }
-}
-
-// DELETE ME - included for testing cards on background color
-.pf-alt-background {
-  background-color: #f5f5f5;
 }
