--- a/source/_patterns/basics/tabs/tabs-variations.hbs
+++ b/source/_patterns/basics/tabs/tabs-variations.hbs
@@ -27,3 +27,11 @@ Single level with persistent secondary level and dropdown open
 {{> basics-tabs secondaryLevel="true" secondaryDropdown="true" secondaryDropdownActive="true"}}
 <br/>
 <br/>
+Patternfly style single level
+{{> basics-tabs pfTabsAsPrimary="true"}}
+<br/>
+<br/>
+Patternfly style single level with dropdown open
+{{> basics-tabs pfTabsAsPrimary="true"  dropdown="true" dropdownActive="true"}}
+<br/>
+<br/>
