--- a/source/scss/_pf-basic-tabs.scss
+++ b/source/scss/_pf-basic-tabs.scss
@@ -3,7 +3,10 @@
 //
 
 .nav-link {
+  color: $pf-tabs-color;
+  @include hover-focus-active {
     color: $pf-tabs-color;
+  }
 }
 
 .nav-tabs {
@@ -25,28 +28,31 @@
 
 // Secondary tabs
 .pf-nav-tabs {
-
+  .nav-tabs + & {
+    .nav-link {
+      font-size: $font-size-relative-sm;
+    }
+  }
   .nav-link {
     border-width: 0 0 $nav-tabs-border-width*2 0;
     border-color: transparent;
-    font-size: $font-size-relative-sm;
     margin: $pf-spacer-xs $pf-spacer-sm 0; // remove padding and add margin so that the underline is only beneath the text
     padding: 0;
 
     @include hover-focus-active {
-     border-color: $nav-tabs-active-link-hover-border-color;
+      border-color: $nav-tabs-active-link-hover-border-color;
     }
 
     &.active {
-     border-color: $nav-tabs-active-link-hover-color;
-    @include hover-focus-active {
       border-color: $nav-tabs-active-link-hover-color;
+      @include hover-focus-active {
+        border-color: $nav-tabs-active-link-hover-color;
+      }
     }
-   }
   }
 
   .dropdown-menu {
-   margin-left: $pf-spacer-sm;
-   margin-top: -$nav-tabs-border-width;
+    margin-left: $pf-spacer-sm;
+    margin-top: -$nav-tabs-border-width;
   }
 }
