--- a/source/_patterns/basics/dropdowns/00-dropdown.hbs
+++ b/source/_patterns/basics/dropdowns/00-dropdown.hbs
@@ -1,4 +1,4 @@
-<div class="dropdown {{ dropdownState }} {{#if isKebab}}pf-dropdown__kebab{{/if}} {{#if pullright}}pull-right{{/if}}" aria-labelledby="{{ dropdownAriaLabelledby }}">
+<div class="dropdown {{ dropdownState }} {{#if isKebab}}pf-dropdown--kebab{{/if}} {{#if pullright}}pull-right{{/if}}" aria-labelledby="{{ dropdownAriaLabelledby }}">
   {{#if isKebab}}
     {{> basics-icon-button btnText="" btnClass="btn-link" iconFamily="fa" iconName="fa-ellipsis-v" iconModifier="" ariaLabeledBy="Kebab"}}
   {{else}}
