--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -2,39 +2,37 @@
  * Patternfly
 */
 
-
-// Core ========================================================================
+// Core: variables and mixins
 @import "pf-basic-colors";
 @import "pf-basic-variables";
 @import "node_modules/bootstrap/scss/variables";
 @import "pf-basic-mixins";
 @import "node_modules/bootstrap/scss/mixins";
 
-// Import Icon Fonts
+// Core: Import Icon Fonts
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 @import "pf-basic-icons";
 
-// Import Overpass Font
+// Core: Import Overpass Font
 @import "pf-basic-fonts";
 
-// Reset and dependencies
+// Core: Reset and dependencies
 @import "node_modules/bootstrap/scss/normalize";
 @import "node_modules/bootstrap/scss/print";
 
+// Basics
 @import "node_modules/bootstrap/scss/reboot";
 @import "node_modules/bootstrap/scss/type";
-@import "node_modules/bootstrap/scss/grid";
-
-// Basics ======================================================================
 @import "node_modules/bootstrap/scss/images";
 @import "node_modules/bootstrap/scss/code";
+@import "node_modules/bootstrap/scss/grid";
 @import "node_modules/bootstrap/scss/tables";
 @import "pf-basic-tables";
 @import "node_modules/bootstrap/scss/forms";
 @import "node_modules/bootstrap/scss/buttons";
 @import "pf-basic-buttons";
 
-// Components ==================================================================
+// Components
 @import "node_modules/bootstrap/scss/animation";
 @import "node_modules/bootstrap/scss/dropdown";
 @import "node_modules/bootstrap/scss/button-group";
