--- a/source/scss/_pf-basic-colors.scss
+++ b/source/scss/_pf-basic-colors.scss
@@ -13,6 +13,10 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
+//
+// PatternFly Colors
+// --------------------------------------------------
+
 $color-pf-black-100:             #fafafa;
 $color-pf-black-150:             #f5f5f5;
 $color-pf-black-200:             #ededed;
