--- a/source/scss/_pf-basic-fonts.scss
+++ b/source/scss/_pf-basic-fonts.scss
@@ -14,7 +14,7 @@ limitations under the License.
 */
 
 //
-// Fonts
+// PatternFly Fonts
 // --------------------------------------------------
 
 /* http://overpassfont.org/ */
