--- a/source/scss/_pf-basic-tables.scss
+++ b/source/scss/_pf-basic-tables.scss
@@ -14,8 +14,9 @@ limitations under the License.
 */
 
 //
-// Basic Bootstrap table
-//
+// PatternFly Table
+// --------------------------------------------------
+
 
 .table {
 
