--- a/source/scss/_pf-component-card.scss
+++ b/source/scss/_pf-component-card.scss
@@ -14,8 +14,8 @@ limitations under the License.
 */
 
 //
-// Base styles
-//
+// PatterFly Cards
+// --------------------------------------------------
 
 .card {
   @include box-shadow($pf-box-shadow);
