--- a/source/scss/_pf-basic-icons.scss
+++ b/source/scss/_pf-basic-icons.scss
@@ -14,7 +14,7 @@ limitations under the License.
 */
 
 //
-// Icons
+// PatternFly Icons
 // --------------------------------------------------
 // Custom icons and selections from IcoMoon - Free (http://icomoon.io/#icons)
 
