--- a/source/scss/_pf-basic-tabs.scss
+++ b/source/scss/_pf-basic-tabs.scss
@@ -14,8 +14,8 @@ limitations under the License.
 */
 
 //
-// Tabs
-//
+// PatternFly Tabs
+// --------------------------------------------------
 
 .nav-link {
   color: $pf-tabs-color;
