--- a/source/scss/_pf-basic-tags.scss
+++ b/source/scss/_pf-basic-tags.scss
@@ -14,8 +14,8 @@ limitations under the License.
 */
 
 //
-// Tag
-//
+// PatternFly Tags
+// --------------------------------------------------
 
 .tag {
   h1 &,
