--- a/source/scss/_pf-component-alert.scss
+++ b/source/scss/_pf-component-alert.scss
@@ -14,7 +14,7 @@ limitations under the License.
 */
 
 //
-// Alerts
+// PatterFly Alerts
 // --------------------------------------------------
 
 .alert {
