--- a/source/scss/_pf-component-pagination.scss
+++ b/source/scss/_pf-component-pagination.scss
@@ -13,6 +13,11 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
+//
+// PatterFly Pagination
+// --------------------------------------------------
+
+
 .pagination {
   display: inline-block;
   padding-left: 0;
