--- a/source/scss/_pf-component-view-selector.scss
+++ b/source/scss/_pf-component-view-selector.scss
@@ -14,8 +14,8 @@ limitations under the License.
 */
 
 //
-// View Selector component
-//
+// PatterFly View Selector
+// --------------------------------------------------
 
 .pf-view-selector__btn-link {
   color: $color-pf-black-900;
