--- a/source/scss/_pf-shame.scss
+++ b/source/scss/_pf-shame.scss
@@ -13,7 +13,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
-/*!
- * Patternfly Shame
- * The nest fot all our shamefull code.
- */
+//
+// Patternfly Shame
+// --------------------------------------------------
+// The nest fot all our shamefull code.
