--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -13,9 +13,9 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
-/*!
- * Patternfly
-*/
+//
+// Patternfly
+// --------------------------------------------------
 
 // Core: variables and mixins
 @import "pf-basic-colors";
