--- a/source/scss/_pf-component-toolbar.scss
+++ b/source/scss/_pf-component-toolbar.scss
@@ -1,26 +1,23 @@
 .pf-toolbar {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding-right: ($grid-gutter-width-base / 2);
   padding-left: ($grid-gutter-width-base / 2);
+  background-color: salmon;
 }
 
-// This is a grouping of items in a toolbar
 .pf-toolbar__group {
-  align-items: baseline;
-  display:inline-flex;
+  display: flex;
+  background-color: lightBlue;
 }
 
-.pf-toolbar__group__item {
-  display: inline-block;
-  padding: 0 $pf-spacer-xs;
+.pf-toolbar__group-item {
+  padding-right: $pf-spacer-xs;
+  padding-left: $pf-spacer-xs;
+  background-color: lightGreen;
 }
 
-.pf-toolbar__subgroup__item {
-  display: inline-block;
-  padding: 0 $pf-spacer-xs;
-}
-
-.pf-toolbar__group__item + .pf-toolbar__group__item {
-  border-left: 1px solid $color-pf-black-900;
+.pf-toolbar__group-item--delimited {
+  border-left: 1px solid $color-pf-red-500;
 }
