--- a/source/_patterns/components/toolbar/test-toolbar.hbs
+++ b/source/_patterns/components/toolbar/test-toolbar.hbs
@@ -1,25 +1,46 @@
 <div class="pf-toolbar">
 
-<div class="pf-toolbar__group">
-  <div class="pf-toolbar__group-item">
-    first
-  </div>
-  <div class="pf-toolbar__group-item">
-    second
-  </div>
-  <div class="pf-toolbar__group-item pf-toolbar__group-item--delimited">
-    third
+  <div class="pf-toolbar__group">
+    <div class="pf-toolbar__group-item">
+
+      <!-- make this an input group hbs -->
+      <div class="input-group">
+        <div class="input-group-btn">
+          <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Action
+          </button>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+            <div role="separator" class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Separated link</a>
+          </div>
+        </div>
+        <input type="text" class="form-control" aria-label="Text input with dropdown button">
+      </div>
+    </div>
+
+    <div class="pf-toolbar__group-item">
+      {{> basics-dropdown dropdownText= "Secondary" btnClass="btn-secondary" }}
+      {{> basics-icon-button btnText="" btnClass="btn-link" iconFamily="fa" iconName="fa-sort-alpha-asc" iconModifier="pf-icon--sm" ariaLabeledBy="Sort alpha ascending"}}
+    </div>
+
+    <div class="pf-toolbar__group-item pf-toolbar__group-item--delimited">
+      {{> basics-button btnText="Action" btnClass="btn-secondary" }}
+      {{> basics-button btnText="Action" btnClass="btn-secondary" }}
+      {{> basics-icon-button btnText="" btnClass="btn-link" iconFamily="fa" iconName="fa-ellipsis-v" iconModifier="" ariaLabeledBy="Kebab"}}
+    </div>
   </div>
 
-</div>
-<div class="pf-toolbar__group">
-  <div class="pf-toolbar__group-item">
-    next to last
-  </div>
-  <div class="pf-toolbar__group-item pf-toolbar__group-item--delimited">
-    last one
-  </div>
+  <div class="pf-toolbar__group">
+    <div class="pf-toolbar__group-item">
+      Search
+    </div>
 
-</div>
+    <div class="pf-toolbar__group-item pf-toolbar__group-item--delimited">
+      View selectors
+    </div>
+  </div>
 
 </div><!-- /pf-toolbar -->
