adds typography treatment

--- a/source/_patterns/basics/00-typography/02-headings.hbs
+++ b/source/_patterns/basics/00-typography/02-headings.hbs
@@ -1,6 +1,7 @@
-<h1>h1. Bootstrap heading</h1>
-<h2>h2. Bootstrap heading</h2>
-<h3>h3. Bootstrap heading</h3>
-<h4>h4. Bootstrap heading</h4>
-<h5>h5. Bootstrap heading</h5>
-<h6>h6. Bootstrap heading</h6>
+<h1 class="mb-1">Heading 1. Overpass Light 28px, Weight 400</h1>
+<h2 class="mb-1">Heading 2. Overpass Light 24px, Weight 400</h2>
+<h3 class="mb-1">Heading 3. Overpass Light 20px, Weight 400</h3>
+<h4 class="mb-1">Heading 4. Overpass Light 16px, Weight 600</h4>
+<p>Body. Overpass Light 14px, Weight 500</p>
+<p><strong>Body Bold. Overpass Light 14px, Weight 700</strong></p>
+<p><small>Small Text. Overpass Light 12px, Weight 500</small></p>
