--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -38,6 +38,7 @@ limitations under the License.
 // Basics
 @import "node_modules/bootstrap/scss/reboot";
 @import "node_modules/bootstrap/scss/type";
+@import "pf-basic-type";
 @import "node_modules/bootstrap/scss/images";
 @import "node_modules/bootstrap/scss/code";
 @import "node_modules/bootstrap/scss/grid";
