--- a/source/scss/_pf-basic-variables.scss
+++ b/source/scss/_pf-basic-variables.scss
@@ -272,6 +272,7 @@ $border-width: 1px;
 //
 // Font, line-height, and color for body text, headings, and more.
 $font-family-sans-serif: “Overpass”, Overpass, “Open Sans”, Helvetica, sans-serif;
+$font-family-monospace:  “Overpass Mono”, Overpass Mono, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 
 
 // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
@@ -279,13 +280,13 @@ $font-size-root: 14px;
 
 $font-size-h1: 2rem !default; // 28px
 $font-size-h2: 1.714285rem !default; // ~24px
-$font-size-h3: 9.428571rem !default; // ~20px
+$font-size-h3: 1.428571rem !default; // ~20px
 $font-size-h4: 1.142857rem !default; // ~16px
 $font-size-h5: 1rem !default; // ~14px
-$font-size-h6: $small-font-size !default; // ~12px
+$font-size-h6: 0.857142rem !default; // ~12px
 
 // small font size
-$small-font-size: 0.857142rem; // ~12px;
+// $small-font-size: 0.857142rem; // ~12px;
 
 // Use relative font sizes when font size should vary with the parent
 $font-size-relative-base: 1em !default;
@@ -295,7 +296,7 @@ $font-size-relative-xs:   .75em !default;
 
 $line-height-base: 1.66666667;
 
-$headings-font-weight: $pf-font-weight-bold;
+$headings-font-weight: $pf-font-weight-light;
 
 $icon-size-lg: 3.3rem;
 $icon-size-md: 1.75rem;
