--- a/source/css/patternfly.css
+++ b/source/css/patternfly.css
@@ -3043,7 +3043,7 @@ html {
   -webkit-tap-highlight-color: transparent; }
 
 body {
-  font-family: “Overpass”, Overpass, “Open Sans”, Helvetica, sans-serif;
+  font-family: “overpass”, Overpass, “Open Sans”, Helvetica, sans-serif;
   font-size: 1rem;
   line-height: 1.66667;
   color: #030303;
@@ -3319,11 +3319,11 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 */
-h4, .h4 {
-  font-weight: 600; }
-
 body {
   font-weight: 500; }
+
+h4, .h4 {
+  font-weight: 600; }
 
 strong {
   font-weight: 700; }
@@ -3357,7 +3357,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: “Overpass Mono”, Overpass Mono, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
+  font-family: “overpass-mono”, Overpass-mono, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
 
 code {
   padding: 0.2rem 0.4rem;
@@ -4524,15 +4524,15 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 
 .btn {
   display: inline-block;
-  font-weight: normal;
-  line-height: 1.25;
+  font-weight: 500;
+  line-height: 1;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
   cursor: pointer;
   user-select: none;
   border: 1px solid transparent;
-  padding: 0.5rem 1rem;
+  padding: 0.75rem 1.25rem;
   font-size: 1rem; }
   .btn:focus, .btn.focus, .btn:active:focus, .btn:active.focus, .btn.active:focus, .btn.active.focus {
     outline: 5px auto -webkit-focus-ring-color;
@@ -4958,11 +4958,11 @@ fieldset[disabled] a.btn {
     text-decoration: none; }
 
 .btn-lg, .btn-group-lg > .btn {
-  padding: 0.75rem 1.5rem;
+  padding: 0.75rem 1.25rem;
   font-size: 1.25rem; }
 
 .btn-sm, .btn-group-sm > .btn {
-  padding: 0.25rem 0.5rem;
+  padding: 0.75rem 1.25rem;
   font-size: 0.875rem; }
 
 .btn-block {
@@ -5436,18 +5436,18 @@ tbody.collapse.in {
   outline: 0; }
 
 .btn + .dropdown-toggle-split {
-  padding-right: 0.75rem;
-  padding-left: 0.75rem; }
+  padding-right: 0.9375rem;
+  padding-left: 0.9375rem; }
   .btn + .dropdown-toggle-split::after {
     margin-left: 0; }
 
 .btn-sm + .dropdown-toggle-split, .btn-group-sm > .btn + .dropdown-toggle-split {
-  padding-right: 0.375rem;
-  padding-left: 0.375rem; }
+  padding-right: 0.9375rem;
+  padding-left: 0.9375rem; }
 
 .btn-lg + .dropdown-toggle-split, .btn-group-lg > .btn + .dropdown-toggle-split {
-  padding-right: 1.125rem;
-  padding-left: 1.125rem; }
+  padding-right: 0.9375rem;
+  padding-left: 0.9375rem; }
 
 .btn-group.open .dropdown-toggle {
   box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
@@ -7227,7 +7227,7 @@ limitations under the License.
   position: absolute;
   z-index: 1070;
   display: block;
-  font-family: “Overpass”, Overpass, “Open Sans”, Helvetica, sans-serif;
+  font-family: “overpass”, Overpass, “Open Sans”, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   letter-spacing: normal;
@@ -7308,7 +7308,7 @@ limitations under the License.
   display: block;
   max-width: 276px;
   padding: 1px;
-  font-family: “Overpass”, Overpass, “Open Sans”, Helvetica, sans-serif;
+  font-family: “overpass”, Overpass, “Open Sans”, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   letter-spacing: normal;
