--- a/source/css/style.css
+++ b/source/css/style.css
@@ -25,6 +25,8 @@
  }
 
  .sg-pattern-desc h2{
-   font-size: 1.2rem;
-   /*text-transform: uppercase;*/
- }
+   font-size: 12px;
+   margin-bottom: 10px;
+   text-transform: uppercase;
+   font-weight: bold;
+  }
