--- a/source/scss/_pf-basic-variables.scss
+++ b/source/scss/_pf-basic-variables.scss
@@ -196,7 +196,7 @@ $pf-opacity-dark:   0.85;
 $spacer:   1rem;
 $pf-spacer-xxxs:   ($spacer * .25);   // ~3px
 $pf-spacer-xxs:    ($spacer * .5);    // 7px
-$pf-spacer-xs:     ($spacer * .75);   // ~10px
+$pf-spacer-xs:     ($spacer * .7);   // ~10px
 $pf-spacer-sm:     $spacer;           // 14px
 $pf-spacer-md:     ($spacer * 1.25);  // ~17px
 $pf-spacer-lg:     ($spacer * 1.5);   // 21px
@@ -278,6 +278,11 @@ $font-family-monospace:  “overpass-mono”, Overpass-mono, Menlo, Monaco, Cons
 // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
 $font-size-root: 14px;
 
+$font-size-base: 1rem !default;
+$font-size-lg:   1.142857rem !default; // ~16px
+$font-size-sm:   .85rem !default; // ~12px
+$font-size-xs:   .75rem !default;
+
 $font-size-h1: 2rem !default; // 28px
 $font-size-h2: 1.714285rem !default; // ~24px
 $font-size-h3: 1.428571rem !default; // ~20px
@@ -291,7 +296,6 @@ $line-height-base: 1.66666667 !default;
 // $headings-margin-bottom: 0 !default;
 // $headings-line-height:   1 !default;
 $headings-font-weight: $pf-font-weight-light !default;
-
 
 // small font size
 // $small-font-size: 0.857142rem; // ~12px;
